--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --env-file=.env.local src/server.js"
+    "dev": "nodemon --env-file=.env src/server.js"
   },
   "keywords": [],
   "author": "",
